testsuite/tests/ghc-regress/indexed-types/should_fail/OverA.hs
{-# OPTIONS -ftype-families -fglasgow-exts #-}

module OverA (C)
where

data family C a b :: *
